--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "css-loader": "^5.0.2",
+    "remove": "^0.1.5",
+    "style-loader": "^2.0.0"
   }
 }
